src/test/ui/pattern/issue-68393-let-pat-assoc-constant.stderr
error[E0158]: associated consts cannot be referenced in patterns
  --> $DIR/issue-68393-let-pat-assoc-constant.rs:20:40
   |
LL | pub fn test<A: Foo, B: Foo>(arg: EFoo, A::X: EFoo) {
   |                                        ^^^^

error[E0158]: associated consts cannot be referenced in patterns
  --> $DIR/issue-68393-let-pat-assoc-constant.rs:22:9
   |
LL |     let A::X = arg;
   |         ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0158`.
